--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<p style="color: green"><%= notice %></p>
+
+<%= render @user %>
+
+<p>
+    <%= link_to "Show All Posts", user_posts_path(:id) %>
+
+
