--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,15 @@
-
-
 <h1>Users</h1>
 
-<div id="users">
-  <% @users.each do |user| %>
-    <%= render user %>
-    <p>
-      <%= link_to "Show this user", user %>
-    </p>
-  <% end %>
-</div>
+<p>Here is the list of users:</p>
 
+<ul>
+  <% @users.each do |user| %>
+  <li>
+    <div>User Image</div>
+    <div>
+      <h2><a><%= user.name %></a></h2>
+      <span>Number of posts:<%= user.posts_counter %></span>
+    </div>
+  </li>
+<% end %>
+</ul>
