--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,30 @@
-<p style="color: green"><%= notice %></p>
 
-<%= render @user %>
+<div>
+<section>
+  <div>User Image</div>
+  <div>
+    <h1><a><%= @user.name %></a></h1>
+    <span>Number of posts:<%= @user.posts_counter %></span>
+  </div>
+</section>
 
-<p>
-    <%= link_to "Show All Posts", user_posts_path(:id) %>
+<section>
+  <h2>Bio</h2>
+  <p><%= @user.bio %></p>
+</section>
 
+<section>
+ <ul>
+   <% @user.posts.each do |post| %>
+     <li>
+       <h3>Post <%='#'%><%= post.id %></h3>
+       <p>post.text</p>
+       <span>Comments: <%= post.comments_counter %></span>
+       <span>Likes: <%= post.likes_counter %></span>
+     </li>
+   <% end %>
+ </ul>
+ <button>See all posts</button>
+</section>
+</div>
 
