--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
 
 <p>Here is the list of users:</p>
 
+<div>
 <ul>
   <% @users.each do |user| %>
   <li>
@@ -11,5 +12,12 @@
       <span>Number of posts:<%= user.posts_counter %></span>
     </div>
   </li>
+  <li>
+    <%= link_to "Show this user", user %>
+  </li>
+  <br>
+  <br>
+  <br>
 <% end %>
+</div>
 </ul>
