--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,20 @@
-<h1>Posts</h1>
+<div>
+  <section>
+    <div>User Image</div>
+    <div>
+      <h1><a><%= @user.name%></a></h1>
+      <span>Number of posts:<%= @user.posts_counter%></span>
+    </div>
+  </section>
 
-<div id="posts">
-    
-  <% @posts.each do |post| %>
-    <%= render post %>
-    <% end %>
-    
+  <section>
+   <ul>
+     <% @posts.each do |post| %>
+       <li>
+         <h3>Post <%='#'%><%= post.id %></h3>
+       </li>
+     <% end %>
+   </ul>
+   <a>Pagination</a>
+  </section>
 </div>
