--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,13 +18,15 @@
    <% @user.posts.each do |post| %>
      <li>
        <h3>Post <%='#'%><%= post.id %></h3>
-       <p>post.text</p>
+       <p>Title: <%= post.title %></p>
        <span>Comments: <%= post.comments_counter %></span>
        <span>Likes: <%= post.likes_counter %></span>
      </li>
    <% end %>
  </ul>
- <button>See all posts</button>
+ <button>
+ See all posts
+ </button>
 </section>
 </div>
 
