style: Add Design to the Post(s) and User(s)

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,20 +1,22 @@
 <div>
-  <section>
-    <div>User Image</div>
-    <div>
-      <h1><a><%= @user.name%></a></h1>
-      <span>Number of posts:<%= @user.posts_counter%></span>
-    </div>
-  </section>
+  <section id='container_item'>
+  <div id='container_image'>User Image</div>
+  <div id='container_inner'>
+    <h1 id='container_name'><a><%= @user.name %></a></h1>
+    <h2 id='container_counter'>Number of posts:<%= @user.posts_counter %></h2>
+  </div>
+</section>
 
-  <section>
+  <section id='container_post'>
    <ul>
      <% @posts.each do |post| %>
        <li>
          <h3>Post <%='#'%><%= post.id %></h3>
+         <p> <%= post.text %></p>
        </li>
      <% end %>
    </ul>
    <a>Pagination</a>
   </section>
 </div>
+
