--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 
 <div>
-<section>
+<section id='container_bio'>
   <div>
     <h1>Post <%='#'%><%= @post.id %> <span>by <%=@user.name%></span></h1>
     <span>Comments: <%= @post.comments_counter %></span>
