--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -90,6 +90,8 @@ body {
 #container_counter {
   text-align: right;
   border: 2px solid black;
+  padding: 0 2rem;
+  margin: 2rem;
 }
 
 #container_bio {
