--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,17 +23,17 @@
         <h3>Post <%='#'%><%= post.id %></h3>
         <p> <%= post.text %></p>
         <div id='container_link'>
-          <%= link_to 'Show Post', user_post_path(@post.id) %> 
+          <%= link_to 'Show Post', user_post_path(post.id) %> 
         </div>
         <div>
-        <span>Comments: <%= @post.comments_counter %></span>&nbsp;
-        <span>Likes: <%= @post.likes_counter %></span>
+        <span>Comments: <%= post.comments_counter %></span>&nbsp;
+        <span>Likes: <%= post.likes_counter %></span>
         </div>
      </li>
    <% end %>
  </ul>
  <button>
- <%= link_to 'See all posts', user_posts_path(@user.id, @posts) %>
+ <%= link_to 'See all posts', user_posts_path(@user, @user.posts) %>
  </button>
 </section>
 </div>
