--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,10 @@
 <%= form_with model: Comment, url: user_post_comments_path(@user, @post), method: :post, local: true do |f| %>
-    <div id="comment_form">
+    <div class="new_comment_form">
     <div>
-        <%= f.label :text, "Comment" %>
-        <%= f.text_field :text, placholder: "Comment" %>
+        <%= f.text_field :text, placholder: "Comment", class: 'comment_field' %>
     </div>
     <div>
-    <%= f.submit "Send" %>
+    <%= f.submit "Send", class: 'comment_submit' %>
     </div>
     </div>
 <% end %>
