test: Features Posts#Index && Posts#Show
refactor: Features Users#Index && Users#Show

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -17,7 +17,7 @@
 <section class='container_post_show_comments'>
 <h2>Comments</h2>
 <ul class='post_show_comments'>
-<% @comments.includes(:author).each do |comment| %>
+<% @comments.each do |comment| %>
   <li>
     <span><%= comment.author.name %>: <%= comment.text %></span>
   </li>
