--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,6 +17,9 @@
           <h4><%= post.title %></h4>
          <p> <%= post.text %></p>
         </div>
+        <if can? :destroy, post %>
+        <%= link_to 'Delete', user_post_path(@user, post), method: :delete %>
+        <% end %>
         <% end %>
             <div class='container_post_index_comments'>
             <% post.comments.includes(:author).limit(5).each do |comment| %>
