--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,7 +30,7 @@
             </div>
      <% end %>
      <div class='container_pagination'>
-   <button>Pagination</button>
+      <%= will_paginate @posts %>
     </div>
   </section>
   </div>
